--- a/article.html
+++ b/article.html
@@ -5,7 +5,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+	<base href="/">
+	<link rel="stylesheet" href="/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title id="page-title">Hourly Houston</title>
     <!-- SEO/meta placeholders (will be populated dynamically when the article loads) -->
