--- a/article.html
+++ b/article.html
@@ -581,22 +581,31 @@
 			const json = await res.json();
 			const post = json && json.post ? json.post : null;
 			if(!post) return;
-			// replace hero content with only the article image
-			const heroEl = document.querySelector('.hero');
-			if(heroEl){
-				heroEl.innerHTML = '';
-				const img = document.createElement('img');
-				img.src = post.url || '';
-				img.alt = post.title || '';
-				heroEl.appendChild(img);
-			}
+						// replace hero content with only the article image (use post.url or post.image)
+						const heroEl = document.querySelector('.hero');
+						if(heroEl){
+								const imgUrl = post.url || post.image || '';
+								heroEl.innerHTML = '';
+								if(imgUrl){
+									const img = document.createElement('img');
+									img.src = imgUrl;
+									img.alt = post.title || '';
+									img.loading = 'lazy';
+									img.decoding = 'async';
+									heroEl.appendChild(img);
+								} else {
+									// no image available — keep hero empty to avoid showing placeholder text
+								}
+						}
 
 			// Populate SEO/meta tags so shared links show useful preview
 			try{
 				const firstPara = (post.body||'').split(/\n\n+/)[0] || '';
 				// set document title and meta tags for social previews
 				const pageTitle = `Hourly Houston - ${post.title || ''}`.trim();
-				document.getElementById('page-title').textContent = pageTitle;
+				// update <title> and the #page-title element for good measure
+				try{ document.title = pageTitle; }catch(e){}
+				const pageTitleEl = document.getElementById('page-title'); if(pageTitleEl) pageTitleEl.textContent = pageTitle;
 				// standard description
 				const desc = firstPara.replace(/\n/g,' ');
 				const img = post.url || '';
