--- a/article.html
+++ b/article.html
@@ -61,7 +61,9 @@
 <div class="hero-container">
 <div class="hero-body">
 		
-        	<img id="hero-img" tabindex="-1" aria-live="polite" alt="" loading="lazy" decoding="async" style="display:none; width:100%; height:auto; object-fit:cover;" />
+			<div id="hero-wrap" tabindex="-1" aria-live="polite">
+				<img id="hero-img" alt="" loading="lazy" decoding="async" style="display:none; width:100%; height:auto; object-fit:cover;" />
+			</div>
 		
 	<div class="article-section">
 	<h1 id="title">Article Title</h1>
